# funathon-project3

./: .gitignore  .nojekyll  1-acquisition.html  1-acquisition.qmd  1-preprocessing.html  2-model.html  2-model.qmd  3-inference.html  3-inference.qmd  3-metrics.html  4-deployment.html  4-deployment.qmd  4-logging.html  4-statistics.qmd  5-deployment.html  README.md  _quarto.yaml  doc_projet.html  doc_projet.qmd  index.html  index.qmd  init.sh  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: preview.yaml  publish.yaml
final_solution/: download_region.py
intermediate_solutions/solution_step1/: main.py  utils.py
intermediate_solutions/solution_step1_to_2/: main.py
intermediate_solutions/solution_step2/: main.py  utils.py
intermediate_solutions/solution_step2/data/: dataset.py  download.py  loading.py  normalization.py  transforms.py
intermediate_solutions/solution_step2/models/: model.py  module.py
intermediate_solutions/solution_step2/training/: lightning.py
intermediate_solutions/solution_step3/: folium.py  main.py  utils.py
intermediate_solutions/solution_step4/: main.py
pr-preview/pr-10/: 1-acquisition.html  2-model.html  3-inference.html  4-deployment.html  doc_projet.html  index.html  search.json  sitemap.xml
pr-preview/pr-10/site_libs/bootstrap/: bootstrap-97deab96fdc966748f632f1c3d73e996.min.css  bootstrap-9c86c6a150ad8204aa26c688cf8b52e3.min.css
pr-preview/pr-11/: 1-acquisition.html  2-model.html  4-deployment.html  doc_projet.html  index.html  search.json  sitemap.xml
pr-preview/pr-12/: 1-acquisition.html  2-model.html  3-training.html  4-inference.html  5-deployment.html  doc_projet.html  index.html  search.json  sitemap.xml
pr-preview/pr-6/: 3-inference.html  index.html  sitemap.xml
pr-preview/pr-7/: 1-acquisition.html  2-model.html  3-inference.html  4-deployment.html  doc_projet.html  index.html  search.json  sitemap.xml
pr-preview/pr-8/: 1-acquisition.html  2-model.html  3-inference.html  4-statistics.html  doc_projet.html  index.html  search.json  sitemap.xml
pr-preview/pr-9/: 1-acquisition.html  2-model.html  index.html  sitemap.xml
site_libs/bootstrap/: bootstrap-1f038360665db117ae38b1e8b2350144.min.css  bootstrap-42bf3e1af73d1040bfd0cb58048c1b47.min.css  bootstrap-4804d2be80772aed24f3877bc22ec667.min.css
starting_point/: 1_data_acquisition.py
