[project]
name = "funathon-project3"
version = "0.1.0"
description = "Satellite image segmentation with deep learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "astrovision>=0.14.7",
    "cloudpickle>=3.1.1",
    "gdal==3.11.4",
    "jaraco-collections>=5.2.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.1",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.1",
]

[project.optional-dependencies]
training = [
    "albumentations>=2.0.8",
    "astrovision>=0.14.7",
    "cloudpickle>=3.1.1",
    "gdal==3.11.4",
    "jaraco-collections>=5.2.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.1",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.1",
]
