[project]
name = "funathon-project3"
version = "0.1.0"
description = "Satellite image segmentation with deep learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astrovision>=0.14.7",
    "oauthlib>=3.2",
    "requests-oauthlib>=1.3",
    "dash>=3.4.0",
    "dash-leaflet>=1.1.3",
    "folium>=0.15.0",
    "gdal==3.11.4",
    "geopandas>=1.0.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.9.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "rasterio>=1.4.0",
    "rasterstats>=0.20.0",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
training = [
    "albumentations>=1.4.0",
    "pytorch-lightning>=2.4.0",
    "torch>=2.4.0",
    "transformers>=4.44.0",
]

[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
